--- a/animals.html
+++ b/animals.html
@@ -172,30 +172,30 @@
       }
     }
 
-    function checkAnswer() {
-      const userInput = input.value.trim();
-      const currentWord = words[currentIndex];
-      if (currentWord.answers.includes(userInput)) {
-        input.classList.add('submitted-correct');
-        score++;
-        setTimeout(() => {
-          // Save the current progress to sessionStorage before navigating to the answer page
-          saveProgress();
-          window.location.href = `animalsanswer.html?answer=${encodeURIComponent(currentWord.japanese)}&definition=${encodeURIComponent(currentWord.english)}`;
-        }, 500);
-      } else {
-        input.classList.add('submitted-incorrect');
-        document.getElementById('feedback').textContent = '❌ Try again!';
-      }
-      updateScore();
-    }
-
-    function skipWord() {
-      const word = words[currentIndex];
-      // Save the current progress to sessionStorage before navigating to the answer page
+function checkAnswer() {
+  const userInput = input.value.trim();
+  const currentWord = words[currentIndex];
+  if (currentWord.answers.includes(userInput)) {
+    input.classList.add('submitted-correct');
+    score++;
+    currentIndex++; // Increment index to go to next word
+    setTimeout(() => {
       saveProgress();
-      window.location.href = `animalsanswer.html?answer=${encodeURIComponent(word.japanese)}&definition=${encodeURIComponent(word.english)}`;
-    }
+      window.location.href = `animalsanswer.html?answer=${encodeURIComponent(currentWord.japanese)}&definition=${encodeURIComponent(currentWord.english)}`;
+    }, 500);
+  } else {
+    input.classList.add('submitted-incorrect');
+    document.getElementById('feedback').textContent = '❌ Try again!';
+  }
+  updateScore();
+}
+
+function skipWord() {
+  const word = words[currentIndex];
+  currentIndex++; // Increment index to go to next word
+  saveProgress();
+  window.location.href = `animalsanswer.html?answer=${encodeURIComponent(word.japanese)}&definition=${encodeURIComponent(word.english)}`;
+}
 
     function showHint() {
       const word = words[currentIndex];
