--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100%;
+      transition: background-color 0.3s, color 0.3s;
     }
 
     .container {
@@ -31,59 +31,102 @@
     h1 {
       font-size: 36px;
       color: #4CAF50;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
+    }
+
+    p.subtitle {
+      color: #666;
+      margin-bottom: 30px;
+    }
+
+    .category-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 15px;
     }
 
     .category-button {
-      display: inline-block;
       background-color: #4CAF50;
       color: white;
-      padding: 15px 30px;
-      font-size: 20px;
-      border-radius: 8px;
+      padding: 15px;
+      font-size: 18px;
+      border-radius: 10px;
       text-decoration: none;
-      margin: 10px 0;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      display: block;
     }
 
     .category-button:hover {
       background-color: #45a049;
+      transform: scale(1.03);
     }
 
     .category-button:active {
       background-color: #388e3c;
     }
 
-    .category-container {
-      margin-top: 20px;
+    .toggle-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      padding: 10px 16px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 14px;
     }
 
-    .category-button-container {
-      margin: 15px;
+    /* Dark Mode */
+    body.dark-mode {
+      background-color: #121212;
+      color: #ffffff;
+    }
+
+    body.dark-mode .container {
+      background-color: #1e1e1e;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+    }
+
+    body.dark-mode .category-button {
+      background-color: #2e7d32;
+    }
+
+    body.dark-mode .category-button:hover {
+      background-color: #388e3c;
+    }
+
+    body.dark-mode h1 {
+      color: #81c784;
+    }
+
+    body.dark-mode .subtitle {
+      color: #aaa;
     }
   </style>
 </head>
 <body>
 
+<button class="toggle-btn" onclick="toggleDarkMode()">Toggle Theme</button>
+
 <div class="container">
   <h1>Welcome to Japanese Typing Game</h1>
-  <p>Select a category to start typing practice:</p>
+  <p class="subtitle">Select a category to start typing practice:</p>
 
   <div class="category-container">
-    <div class="category-button-container">
-      <a href="animals.html" class="category-button">Animals</a>
-    </div>
-    <div class="category-button-container">
-      <a href="food.html" class="category-button">Food</a>
-    </div>
-    <div class="category-button-container">
-      <a href="jlptN5.html" class="category-button">JLPT N5</a>
-    </div>
-    <div class="category-button-container">
-      <a href="jlptN1.html" class="category-button">JLPT N1</a>
-    </div>
+    <a href="animals.html" class="category-button">Animals</a>
+    <a href="food.html" class="category-button">Food</a>
+    <a href="jlptN5.html" class="category-button">JLPT N5</a>
+    <a href="jlptN1.html" class="category-button">JLPT N1</a>
   </div>
 </div>
+
+<script>
+  function toggleDarkMode() {
+    document.body.classList.toggle("dark-mode");
+  }
+</script>
 
 </body>
 </html>
