--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 <button class="toggle-btn" onclick="toggleDarkMode()">Toggle Theme</button>
 
 <div class="container">
-  <h1>Welcome to Japanese Typing Game</h1>
-  <p class="subtitle">Select a category to start typing practice:</p>
+  <h1>Learn Japanese</h1>
+  <p class="subtitle">Select a category to start your journey:</p>
 
   <div class="category-container">
     <a href="animals.html" class="category-button">Animals</a>
