--- a/jlptN1.html
+++ b/jlptN1.html
@@ -137,7 +137,7 @@
       if (e.key === 'Enter' && !isComposing) checkAnswer();
     });
 
-    async function loadjlptN1() {
+    async function loadJlptN1() {
       const res = await fetch('jlptN1.json');
       words = await res.json();
 
@@ -228,7 +228,7 @@ function skipWord() {
     }
 
     // Initial load
-    loadjlptN1();
+    loadJlptN1();
   </script>
 </body>
 </html>
