--- a/index.html
+++ b/index.html
@@ -5,17 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Japanese Typing Game - Main Portal</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body, html {
       margin: 0;
       padding: 0;
-      height: 100%;
       font-family: 'Roboto', sans-serif;
+      height: 100vh;
       background-color: #f5f5f5;
-      color: #333;
+      display: flex;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    /* Sidebar */
+    .sidebar {
+      width: 70px;
+      background-color: #4CAF50;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 20px;
+      gap: 30px;
+    }
+
+    .sidebar a {
+      color: white;
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 12px;
+      transition: opacity 0.2s ease;
+    }
+
+    .sidebar a:hover {
+      opacity: 0.8;
+    }
+
+    .sidebar img {
+      width: 30px;
+      height: 30px;
+      margin-bottom: 5px;
+    }
+
+    /* Main content */
+    .main {
+      flex-grow: 1;
       display: flex;
       justify-content: center;
       align-items: center;
-      transition: background-color 0.3s, color 0.3s;
+      padding: 40px;
     }
 
     .container {
@@ -34,54 +75,57 @@
       margin-bottom: 10px;
     }
 
-    p.subtitle {
+    .subtitle {
       color: #666;
       margin-bottom: 30px;
     }
 
     .category-container {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 20px;
     }
 
-    .category-card {
+    .category-button {
       background-color: #4CAF50;
       color: white;
-      text-decoration: none;
       padding: 20px;
-      border-radius: 12px;
-      transition: background-color 0.3s ease, transform 0.2s ease;
+      font-size: 16px;
+      border-radius: 10px;
+      text-decoration: none;
       display: flex;
       flex-direction: column;
       align-items: center;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      min-height: 180px;
     }
 
-    .category-card:hover {
+    .category-button:hover {
       background-color: #45a049;
       transform: scale(1.03);
     }
 
-    .category-card img {
-      width: 80px;
-      height: 80px;
-      object-fit: contain;
-      margin-bottom: 15px;
+    .category-button img {
+      width: 50px;
+      height: 50px;
+      margin-bottom: 10px;
     }
 
-    .category-card h3 {
-      margin: 0;
-      font-size: 20px;
+    .category-title {
+      font-size: 18px;
+      font-weight: bold;
+      margin: 5px 0;
     }
 
-    .category-card p {
-      margin: 8px 0 0;
+    .category-desc {
       font-size: 14px;
+      color: #f0f0f0;
       text-align: center;
     }
 
+    /* Toggle button */
     .toggle-btn {
-      position: absolute;
+      position: fixed;
       top: 20px;
       right: 20px;
       padding: 10px 16px;
@@ -91,6 +135,7 @@
       border-radius: 8px;
       cursor: pointer;
       font-size: 14px;
+      z-index: 999;
     }
 
     /* Dark Mode */
@@ -104,11 +149,11 @@
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
     }
 
-    body.dark-mode .category-card {
+    body.dark-mode .category-button {
       background-color: #2e7d32;
     }
 
-    body.dark-mode .category-card:hover {
+    body.dark-mode .category-button:hover {
       background-color: #388e3c;
     }
 
@@ -119,40 +164,63 @@
     body.dark-mode .subtitle {
       color: #aaa;
     }
+
+    body.dark-mode .category-desc {
+      color: #cccccc;
+    }
   </style>
 </head>
 <body>
 
-<button class="toggle-btn" onclick="toggleDarkMode()">Toggle Theme</button>
+<!-- Sidebar -->
+<div class="sidebar">
+  <a href="settings.html">
+    <img src="img/settings.png" alt="Settings">
+    <span>Settings</span>
+  </a>
+  <a href="leaderboard.html">
+    <img src="img/leaderboard.png" alt="Leaderboard">
+    <span>Ranks</span>
+  </a>
+  <a href="market.html">
+    <img src="img/market.png" alt="Market">
+    <span>Market</span>
+  </a>
+</div>
 
-<div class="container">
-  <h1>Learn Japanese</h1>
-  <p class="subtitle">Select a category to start your journey:</p>
+<!-- Main content -->
+<div class="main">
+  <button class="toggle-btn" onclick="toggleDarkMode()">Toggle Theme</button>
 
-  <div class="category-container">
-    <a href="animals.html" class="category-card">
-      <img src="img/tree_animals_group.png" alt="Animals">
-      <h3>Animals</h3>
-      <p>Practice animal names in Japanese.</p>
-    </a>
+  <div class="container">
+    <h1>Learn Japanese</h1>
+    <p class="subtitle">Select a category to start your journey:</p>
 
-    <a href="food.html" class="category-card">
-      <img src="img/food.png" alt="Food">
-      <h3>Food</h3>
-      <p>Learn how to say popular Japanese foods.</p>
-    </a>
+    <div class="category-container">
+      <a href="animals.html" class="category-button">
+        <img src="img/animals.png" alt="Animals">
+        <div class="category-title">Animals</div>
+        <div class="category-desc">Learn common Japanese animal words.</div>
+      </a>
 
-    <a href="jlptN5.html" class="category-card">
-      <img src="img/jlpt.png" alt="JLPT N5">
-      <h3>JLPT N5</h3>
-      <p>Study basic vocabulary for beginners.</p>
-    </a>
+      <a href="food.html" class="category-button">
+        <img src="img/food.png" alt="Food">
+        <div class="category-title">Food</div>
+        <div class="category-desc">Practice food vocabulary and phrases.</div>
+      </a>
 
-    <a href="jlptN1.html" class="category-card">
-      <img src="img/jlpt.png" alt="JLPT N1">
-      <h3>JLPT N1</h3>
-      <p>Master advanced vocabulary for the JLPT N1.</p>
-    </a>
+      <a href="jlptN5.html" class="category-button">
+        <img src="img/n5.png" alt="JLPT N5">
+        <div class="category-title">JLPT N5</div>
+        <div class="category-desc">Start with basic JLPT N5 vocabulary.</div>
+      </a>
+
+      <a href="jlptN1.html" class="category-button">
+        <img src="img/n1.png" alt="JLPT N1">
+        <div class="category-title">JLPT N1</div>
+        <div class="category-desc">Challenge yourself with advanced terms.</div>
+      </a>
+    </div>
   </div>
 </div>
 
